--- a/examples/rulesapp/rulesapp.json
+++ b/examples/rulesapp/rulesapp.json
@@ -2,10 +2,20 @@
   {
     "name": "n1",
     "properties": [
-       {
+      {
         "name": "name",
         "type": "string",
         "pk-index": 0
+      },
+      {
+        "name": "age",
+        "type": "number",
+        "pk-index": 1
+      },
+      {
+        "name": "address",
+        "type": "string",
+        "pk-index": 2
       }
     ]
   },
@@ -13,10 +23,20 @@
     "name": "n2",
     "properties": [
       {
-       "name": "name",
-       "type": "string",
-       "pk-index": 0
-     }
+        "name": "name",
+        "type": "string",
+        "pk-index": 0
+      },
+      {
+        "name": "wife_name",
+        "type": "string",
+        "pk-index": 1
+      },
+      {
+        "name": "child_name",
+        "type": "string",
+        "pk-index": 2
+      }
     ]
   }
 ]
